style: Wrap universal selector in it's layer to prevent overriding the tailwindcss layered styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+@layer base {
+  *, *:before, *:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
 }
